Beginning styling and links to vue

--- a/scan.html
+++ b/scan.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href='styles.css'>
-    <title>Food Scanner</title>
+    <link href='styles.css' rel='stylesheet'>
+    <title>Scan</title>
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -28,7 +28,9 @@
             </div>
           </nav>
 
-          
+        <div class="container">
+            <input type="file" id="imageFile" accept="image/*" multiple>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
         <script src='app.js'></script>
