--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <img class = "small" src = "images/banana.png">
           </div>
 
-          <p style = "color:rgb(0, 89, 65) ">Food waste created yearly amounts to hundreds of billions pounds in the US alone and is disposed of in landfills. 
+          <p style = "color:rgb(0, 89, 65) ; font-size: 1.1em;">Food waste created yearly amounts to hundreds of billions pounds in the US alone and is disposed of in landfills. 
             This poses a problem aggregated not only by the non-biodegradable debris, but the food itself contributes to the emission of green house gasses as a result of rotting. 
             We are addressing this issue by designing a system that reduces waste and furthermore helps users to make informed decisions about their health. <br><br>
             Users can take a picture of a produce item and upload it to our website.
             The system will scan and detect the name of your food and offer nutritional information as well as determine if a food is safe to eat or rotten. 
             Our goal strives to both better ourselves while bettering the environment.
           </p>
-          <button type="button" id = "b" onclick=""> Start</button>
+          <button type="button" id = "b"class = "button"onclick=""> Start</button>
           <p style = "text-align: center";>Use Food Scanner to upload a photo.</p>
           <script >
             document.getElementById("b").onclick = function () {
