--- a/scan.html
+++ b/scan.html
@@ -27,11 +27,13 @@
               </div>
             </div>
           </nav>
-
         <div class="container">
             <input type="file" id="imageFile" accept="image/*" multiple>
         </div>
+        <p class = "nutritionFacts">name:<br>calores:<br>total fat:<br>cholestrol:<br>sodium:<br>potassium:<br>total carbohydrates:<br>protein:<br><br>freshness:</p>
+        
 
+        <script src = "nutrition.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
         <script src='app.js'></script>
     </body>
