--- a/scan.html
+++ b/scan.html
@@ -29,11 +29,9 @@
           </nav>
         <div class="container">
             <input type="file" id="imageFile" accept="image/*" multiple>
+            <p style = "color:rgb(32, 138, 57); font-size: 2.5em;">jpeg only please</p>
         </div>
-        <p class = "nutritionFacts">name:<br>calores:<br>total fat:<br>cholestrol:<br>sodium:<br>potassium:<br>total carbohydrates:<br>protein:<br><br>freshness:</p>
-        
-
-        <script src = "nutrition.js"></script>
+        <p class = "nutritionFacts">name:<br>calories:<br>total fat:<br>cholestrol:<br>sodium:<br>potassium:<br>total carbohydrates:<br>protein:<br><br>freshness:</p>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
         <script src='app.js'></script>
     </body>
