--- a/scan.html
+++ b/scan.html
@@ -28,8 +28,7 @@
             </div>
           </nav>
         <div class="container">
-            <input type="file" id="imageFile" accept="image/*" multiple>
-            <p style = "color:rgb(32, 138, 57); font-size: 2.5em;">jpeg only please</p>
+          <input class = "button" style="font-size: 1em" type="file" id="imageFile" accept="image/*" multiple />
         </div>
         <p class = "nutritionFacts">name:<br>calories:<br>total fat:<br>cholestrol:<br>sodium:<br>potassium:<br>total carbohydrates:<br>protein:<br><br>freshness:</p>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
